--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Hitung Jumlah Kata.json
 Google Translate.automa.json
 LinkedIn to Prototyper.automa.json
 Scraping Tokopedia.automa.json
+Picture in Picture.automa.json
