--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-*.txt
 kunci.txt
 Hitung Jumlah Kata.json
 Google Translate.automa.json
 LinkedIn to Prototyper.automa.json
 Scraping Tokopedia.automa.json
 Picture in Picture.automa.json
+Google Translate.automa.txt
+Picture in Picture.automa.txt
