--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Scraping Tokopedia.automa.json
 Picture in Picture.automa.json
 Google Translate.automa.txt
 Picture in Picture.automa.txt
+Klik Skip Iklan YouTube.automa.txt
