--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Picture in Picture.automa.json
 Google Translate.automa.txt
 Picture in Picture.automa.txt
 Klik Skip Iklan YouTube.automa.txt
+Klik Skip Iklan YouTube.automa.json
